--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -331,7 +331,7 @@
     @apply z1-text button-orange text-[2vw] px-[4%] py-[1%] ;
 }
 .bt-z1-sm {
-    @apply bg-transparent hover:bg-yellow-500 z1-text border-[4px] px-4 py-2 rounded-[20px] text-center text-white text-[4vw] ml-[40vw];
+    @apply bg-transparent hover:bg-yellow-500 z1-text border-[3px] px-4 py-3 rounded-[15px] text-center text-white text-[3.5vw];
 }
 
 
@@ -365,18 +365,19 @@
 
 /* css zone 4 */
 .rank-card-content {
-    @apply flex relative justify-center SF-TH-Semi px-[3vw];
+    @apply flex relative justify-center SF-TH-Semi ml-[7%];
 
 }
 
 .num-rank{
-    @apply text-[15vw] text-[#F3F7FD] font-bold z-30 mt-[5.5vw];
+    @apply text-[15vw] text-[#F3F7FD]  z-30 ml-[-1vw]  mt-[6vw];
     -webkit-text-stroke: 2px #ff7a00;
+    
 }
 
 .card-rank {
-    @apply  w-[13vw] h-[18vw] max-w-[30vw] mx-4 sm:max-w-sm md:max-w-sm lg:max-w-sm xl:max-w-sm sm:mx-auto md:mx-auto lg:mx-auto xl:mx-auto mt-16 bg-white shadow-xl rounded-[15px];
-    margin-left:-3.5vw;
+    @apply  w-[17vw] h-[18vw] max-w-[30vw]  mt-16 bg-white shadow-xl rounded-[15px];
+    margin-left:-4vw;
 }
 
 .card-img {
