--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,6 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 
 @font-face {
     font-family: DB-Heavent;
@@ -239,7 +236,7 @@
 }
 
 .button-orange {
-    @apply bg-[#FF7A00] hover:bg-yellow-500 rounded-full text-center text-center text-white;
+    @apply bg-[#FF7A00] hover:bg-yellow-500 rounded-full text-center text-white;
 }
 
 .image-type {
@@ -343,11 +340,11 @@
 /* css zone 2 */
 
 .bt-orange {
-    @apply  text-white  bg-[#FF7A00] rounded-full text-[10px] px-3 py-1 w-[5rem];
+    @apply  text-white  bg-[#FF7A00] rounded-full text-[10px] px-3.5 py-1 w-[5rem];
 }
 
 .new-bt {
-    @apply text-[#FF7A00] bg-[#FFEBD9] rounded-full text-[10px] px-3 py-1 w-[5rem];
+    @apply text-[#FF7A00] bg-[#FFEBD9] rounded-full text-[10px] px-3.5 py-1 w-[5rem];
 }
 
 .z-2-text {
