--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -307,7 +307,7 @@
 }
 
 .video-bg {
-    @apply absolute w-full h-full object-cover -translate-x-2/4 -translate-y-2/4 z-[-1] left-2/4 top-2/4;
+    @apply absolute w-full h-[100%] object-cover -translate-x-2/4 -translate-y-2/4 z-[-1] left-2/4 top-2/4;
   }
 
 .bg-image {
