--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -502,9 +502,22 @@
   }
 
   .cb-bg {
-  @apply absolute w-full h-[80%] object-cover -translate-x-2/4 -translate-y-2/4 z-[-1] left-2/4 top-2/4 bg-[url("assets/images/e-learning/topbg.png")] bg-cover bg-center;
+  @apply absolute w-full 
+  
+  object-cover -translate-x-2/4 
+  -translate-y-2/4 z-[-1] left-2/4 top-2/4
+  bg-[url("assets/images/e-learning/topbg.png")]
+  bg-cover
+  overflow-hidden ;
 }
 
+
 .cb-main-content {
-  @apply w-full relative overflow-hidden;
+  @apply w-full absolute overflow-hidden;
 }
+
+.nm-card-cb{
+    @apply   absolute right-[5%]   p-[3rem];
+    border-radius: 20px;
+}
+  
